objects/Admin_Profile_Exception__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting lists the Admin profiles which should be excluded from Workflows.</description>
    <fields>
        <fullName>Run_Rule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>By default rule would be run.</description>
        <label>Run Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Opportuntiy_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Opportuntiy Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunityPart_AIUDUD_oppyStageUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>opportunityPart_AIUDUD_oppyStageUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skip_recalculate_prices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the opportunityTrgHandler will not call the recalculatePrices() method</description>
        <inlineHelpText>If checked the opportunityTrgHandler will not call the recalculatePrices() method</inlineHelpText>
        <label>skip_recalculate_prices</label>
        <type>Checkbox</type>
    </fields>
    <label>Admin Profile Exception</label>
    <listViews>
        <fullName>all</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>Run_Rule__c</columns>
        <columns>Skip_Opportuntiy_Validation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
</CustomObject>